image width fixed on mobile screen

--- a/src/components/ImageGeneration.module.css
+++ b/src/components/ImageGeneration.module.css
@@ -104,4 +104,7 @@
     flex-direction: column;
     align-items: center;
   }
+  .imageContainer {
+    width: 100%;
+  }
 }
